Fix gap between Images

--- a/styles/style.css
+++ b/styles/style.css
@@ -9,7 +9,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 1rem;
+  gap: 0.2rem;
   padding: 1rem;
 }
 
